# hessian2-codec

./: .bazelrc  MODULE.bazel  extensions.bzl
hessian2/basic_codec/: BUILD
